[package]
name = "envoy-lb-client"
version = "0.1.0"
description = "An example generated using the simple template"
authors = ["이정원 <korjwl1@naver.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
color-eyre = "0.6.3"
chrono = "0.4.40"
reqwest = "0.12.15"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread"] }
rand = "0.9.1"
base62 = "2.2.1"
